[EME] ClearKey: list 'persistent-license' sessions as supported https://bugs.webkit.org/show_bug.cgi?id=176985

Reviewed by Xabier Rodriguez-Calvar.

Source/WebCore:

The ClearKey implementation should support the 'persistent-license'
session type for testing purposes. Methods in the CDMPrivateClearKey
class have been updated to handle that session type as supported:
- supportsSessionTypeWithConfiguration() returns true for the
  'persistent-license' session type values,
- supportsConfiguration() allows persistent state as required in
  case of the configured session type being 'persistent-license',
- supportsConfigurationWithRestrictions() as well allows persistent
state as required for 'persistent-license' session types.

No new tests -- affected tests have their baselines updated.

* platform/encryptedmedia/clearkey/CDMClearKey.cpp:
(WebCore::CDMPrivateClearKey::supportsConfiguration const):
(WebCore::CDMPrivateClearKey::supportsConfigurationWithRestrictions const):
(WebCore::CDMPrivateClearKey::supportsSessionTypeWithConfiguration const):

LayoutTests:

Update WPE test baselines for EME ClearKey tests.

* platform/wpe/imported/w3c/web-platform-tests/encrypted-media/clearkey-mp4-playback-persistent-license-expected.txt:
* platform/wpe/imported/w3c/web-platform-tests/encrypted-media/clearkey-mp4-playback-retrieve-destroy-persistent-license-expected.txt:
* platform/wpe/imported/w3c/web-platform-tests/encrypted-media/clearkey-mp4-playback-retrieve-persistent-license-expected.txt:


Canonical link: https://commits.webkit.org/193407@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@222085 268f45cc-cd09-0410-ab3c-d52691b4dbfc